Bug 303739 - shortcuts for text alignment
Summary: shortcuts for text alignment
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-18 12:24 UTC by Pascal d'Hermilly
Modified: 2015-01-22 22:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2012-07-18 12:24:10 UTC
For users it is much easier to use the same hot keys in all programs. 
Calligra words should use the defacto standard hot keys for text alignment.
Users are used to ctrl+e centering the text etc. It's the standard in all rich-text editing programs I know.
The hot keys should be:
align right: ctrl+r
align left: ctrl+l
align center: ctrl+e


Reproducible: Always
Comment 1 Camilla Boemann 2012-07-18 12:40:46 UTC
Not sure how much of a standard that is. In pages the shortcuts are:
Command-{
Command-|
Command-}

But yes MS Office and Writer does use those shortcuts. I'm not sure we even want to have shortcuts pre-assigned for these actions. The ones we have now are even less standard though, so i guess we should do something

Btw you can (re)assign shortcuts yourself - just go to the settings menu
Comment 2 Pascal d'Hermilly 2012-07-18 13:59:53 UTC
I think having the same hot keys as Libre Office and Ms. Office is the best way to go with this. Then things will work in the way most users expect.
Comment 3 Inge Wallin 2013-06-09 12:46:56 UTC
Agreed from me.  Boemann: If you have nothing against it, I can change the default shortcuts for these - and perhaps at the same time the ones for character formatting like ctrl-i for italic and ctrl-b for bold.
Comment 4 Camilla Boemann 2013-06-09 13:28:18 UTC
not really liking it - shortcuts are a sparse resource - once assigned we can reclaim them for more needed functionality, and really changing alignment is not that common a thing.

Not to speak of that we are talking direct formating here - we want to encourage using styles
Comment 5 Camilla Boemann 2015-01-22 22:22:06 UTC
Git commit d053530caff733cd16a9f57460393e3a70c7486f by C. Boemann.
Committed on 22/01/2015 at 19:42.
Pushed by boemann into branch 'calligra/2.9'.

Assign standard shortcuts for text alignment ctrl+l, crtl+e, ctrl+r
we had to reassign the shortcut for find and replace too, so now: ctrl+h (also standard in wordprocessing apps)
and in turn for destraction free mode as well, now: ctrl+shift+f

M  +4    -1    libs/main/KoFindToolbar.cpp
M  +4    -3    plugins/textshape/TextTool.cpp
M  +2    -1    words/part/KWView.cpp

http://commits.kde.org/calligra/d053530caff733cd16a9f57460393e3a70c7486f