Assign standard shortcuts for text alignment ctrl+l, crtl+e, ctrl+r we had to reassign the shortcut for find and replace too, so now: ctrl+h (also standard in wordprocessing apps) and in turn for destraction free mode as well, now: ctrl+shift+f

BUG:303739